--- a/src/HealthCheck/HealthCheck.csproj
+++ b/src/HealthCheck/HealthCheck.csproj
@@ -7,5 +7,6 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
     <PackageReference Include="Blazor.Bootstrap" Version="1.10.1"/>
+    <PackageReference Include="System.Management.Automation" Version="7.3.6"/>
   </ItemGroup>
 </Project>
